--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ body {
 
 .modal-content h3 {
     font-size: 20px;
-    font-weight: 400;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 .logo-img {
