--- a/produit.css
+++ b/produit.css
@@ -11,7 +11,7 @@ body {
     align-items: flex-start;
     padding: 40px;
     max-width: 1200px;
-    margin: 100px auto;
+    margin: 100px 20px;
 }
 
 .product-image img {
@@ -22,11 +22,11 @@ body {
 
 .product-details {
     margin-left: 40px;
-    max-width: 50%;
+    max-width: 60%;
 }
 
 .product-details h1 {
-    font-size: 2em;
+    font-size: 1.4em;
     margin-bottom: 10px;
     text-align: left;
     border-bottom: 1px solid grey;
@@ -60,7 +60,7 @@ body {
 
 #product-info-button {
     background-color: #f5f5f5;
-    border: 1px solid #ccc;
+    border: 1px solid #d6c50d;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
